Test stabilization.